기본 설정 및 틀 구현

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/src/assets/images/logos/lock_hole_white.png"
-    />
+    <link rel="icon" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Password Manager &Extended Access Management | 1Password | 1Password
-    </title>
+    <title>portfolio</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
+<script setup lang="ts"></script>
+<style lang="scss" scoped>
+  #app {
+    width: 100vw;
+  }
+</style>
